--- a/src/templates/_settings.html
+++ b/src/templates/_settings.html
@@ -4,7 +4,8 @@
     label: "API Key"|t('sendgrid'),
     id: 'apiKey',
     name: 'apiKey',
-    instructions: "Enter an API key (which you can get from your SendGrid account)."|t('sendgrid'),
+    instructions: 'Enter an API key (which you can generate in your <a href="https://app.sendgrid.com/settings/api_keys" target="_blank">SendGrid account</a>).'|t('sendgrid'),
+    suggestEnvVars: true,
     suggestions: craft.cp.getEnvSuggestions(),
     value: adapter.apiKey,
     errors: adapter.getErrors('apiKey'),
